--- a/test-index.html
+++ b/test-index.html
@@ -19,7 +19,6 @@
     <script>
       const getHouseElement = document.getElementById("getHouse");
       const houseElement = document.getElementById("house");
-      const getDetailsElement = document.getElementById("getDetails");
       const housematesElement = document.getElementById("housemates");
       const getSortingURL = "https://lp4o7ya0sk.execute-api.eu-central-1.amazonaws.com/dev/house";
 
@@ -29,7 +28,7 @@
           .then((data) => {
             console.log(data.randomHouse, data.housemates);
             houseElement.innerText = "Your House is: " + data.randomHouse;
-            housematesElement.innerText = "Your housates are: ";
+            housematesElement.innerText = "Your housemates are: ";
             for (const housemate of data.housemates) {
               housematesElement.append(housemate.name + ", ");
             }
